homepage and temporary stats activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LOL Stats</string>
+    <string searchName = "searchName">Summoner Name</string>
 </resources>
