--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">LOL Stats</string>
-    <string searchName = "searchName">Summoner Name</string>
+    <string name="searchName">Summoner Name</string>
+    <string name="settingsName">Settings</string>
 </resources>
